syntax = "proto3";

package product;

option go_package = "pb/product";

// 产品创建
message CreateRequest {
  string Name = 1;
  string Desc = 2;
  int64 Stock = 3;
  int64 Amount = 4;
  int64 Status = 5;
  repeated string ImageUrls = 6;  // 商品图片URL列表
  int64 CategoryId = 7;  // 商品分类ID
}
message CreateResponse {
  int64 id = 1;
}
// 产品创建

// 产品修改
message UpdateRequest {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  int64 Stock = 4;
  int64 Amount = 5;
  int64 Status = 6;
  repeated string ImageUrls = 7;  // 商品图片URL列表
  int64 CategoryId = 8;  // 商品分类ID
}
message UpdateResponse {
}
// 产品修改

// 产品删除
message RemoveRequest {
  int64 id = 1;
}
message RemoveResponse {
}
// 产品删除

// 产品详情
message DetailRequest {
  int64 id = 1;
}
message DetailResponse {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  int64 Stock = 4;
  int64 Amount = 5;
  int64 Status = 6;
  repeated string ImageUrls = 7;  // 商品图片URL列表
  int64 CategoryId = 8;  // 商品分类ID
}
// 产品详情

// 添加商品图片
message AddProductImagesRequest {
  int64 ProductId = 1;
  repeated string ImageUrls = 2;
}
message AddProductImagesResponse {
}

// 删除商品图片
message RemoveProductImagesRequest {
  int64 ProductId = 1;
  repeated string ImageUrls = 2;
}
message RemoveProductImagesResponse {
}

// 设置商品主图
message SetMainImageRequest {
  int64 ProductId = 1;
  string ImageUrl = 2;
}
message SetMainImageResponse {
}

service Product {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc Remove(RemoveRequest) returns(RemoveResponse);
  rpc Detail(DetailRequest) returns(DetailResponse);
  rpc AddProductImages(AddProductImagesRequest) returns(AddProductImagesResponse);
  rpc RemoveProductImages(RemoveProductImagesRequest) returns(RemoveProductImagesResponse);
  rpc SetMainImage(SetMainImageRequest) returns(SetMainImageResponse);
}
